--- a/projetos/testes/index.html
+++ b/projetos/testes/index.html
@@ -9,9 +9,23 @@
             background-color: aquamarine;
         }
         div#id1 {
-            width: 200px;
-            height: 173.21px;
-            background-color: rgb(255, 255, 255);
+            display: flex;
+            width: 0px;
+            height: 0px;
+            border-left: 66.6px solid transparent;
+            border-right: 66.6px solid transparent;
+            border-bottom: 100px solid black;
+            position: absolute;
+        }
+        div#id2 {
+            width: 0px;
+            height: 0px;
+            border-left: 33.3px solid transparent;
+            border-right: 33.3px solid transparent;
+            border-top: 50px solid white;
+            position: relative;
+            left: -33.3px;
+            top: 50px;
         }
     </style>
 </head>
