--- a/projetos/projeto001/index.html
+++ b/projetos/projeto001/index.html
@@ -7,6 +7,7 @@
 	  
 	  <title>Título do site</title>
 	  
+	  <link rel="stylesheet" href="estilos/estilo.css">
 	</head>
 	<header>
 		<h1>Título principal do site</h1>
