--- a/projetos/projeto001/index.html
+++ b/projetos/projeto001/index.html
@@ -13,7 +13,13 @@
 		<h1>Título principal do site</h1>
 		<menu>
 			<nav>
-				<p>Área para menu/links</p>
+				<p>
+					<a href="#" target="_self">Menu</a>
+					<a href="#" target="_self">Sobre</a>
+					<a href="#" target="_self">A Empresa</a>
+					<a href="#" target="_self">Serviços</a>
+					<a href="#" target="_self">Contato</a>
+				</p>
 			</nav>
 		</menu>
 	</header>
